--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,8 +4,10 @@ check_PROGRAMS = set_generate_terms_test \
 				 set_geo_test \
 				 set_htm_test \
 				 set_query_test \
+				 set_queue_test \
 				 set_serialise_unserialise_test \
 				 set_sort_test \
+				 set_threadpool_test \
 				 set_wkt_test
 
 TESTS = $(check_PROGRAMS)
@@ -51,7 +53,9 @@ headers =   $(top_builddir)/src/cartesian.cc \
 			$(top_builddir)/src/pcre/pcre_version.c \
 			$(top_builddir)/src/pcre/pcre_xclass.c \
 			$(top_builddir)/src/pcre/pcreposix.c \
+			$(top_builddir)/src/queue.h \
 			$(top_builddir)/src/serialise.cc \
+			$(top_builddir)/src/threadpool.h \
 			$(top_builddir)/src/times.cc \
 			$(top_builddir)/src/utils.cc \
 			$(top_builddir)/src/wkt_parser.cc
@@ -68,11 +72,17 @@ set_htm_test_LDADD = @CHECK_LIBS@
 set_query_test_SOURCES = $(headers) set_query_test.cc test_query.cc
 set_query_test_LDADD = @CHECK_LIBS@
 
+set_queue_test_SOURCES = $(headers) set_queue_test.cc test_queue.cc
+set_queue_test_LDADD = @CHECK_LIBS@
+
 set_serialise_unserialise_test_SOURCES = $(headers) set_serialise_unserialise_test.cc test_serialise.cc
 set_serialise_unserialise_test_LDADD = @CHECK_LIBS@
 
 set_sort_test_SOURCES = $(headers) set_sort_test.cc test_sort.cc
 set_sort_test_LDADD = @CHECK_LIBS@
+
+set_threadpool_test_SOURCES = $(headers) set_threadpool_test.cc test_threadpool.cc
+set_threadpool_test_LDADD = @CHECK_LIBS@
 
 set_wkt_test_SOURCES = $(headers) set_wkt_test.cc test_wkt_parser.cc
 set_wkt_test_LDADD = @CHECK_LIBS@
