Added Howard Hinnant's date.h

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -68,6 +68,7 @@ noinst_HEADERS = \
 	database.h \
 	database_autocommit.h \
 	database_utils.h \
+	date.h \
 	datetime.h \
 	endpoint.h \
 	endpoint_resolver.h \
