--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,12 +1,12 @@
 ## Process this file with automake to produce Makefile.in
 
-check_PROGRAMS = set_generate_terms_test \
+check_PROGRAMS = set_forward_list_test \
+				 set_generate_terms_test \
 				 set_geo_test \
 				 set_htm_test \
 				 set_query_test \
 				 set_queue_test \
 				 set_serialise_unserialise_test \
-				 set_slist_test \
 				 set_sort_test \
 				 set_threadpool_test \
 				 set_wkt_test
@@ -23,6 +23,7 @@ headers =   $(top_builddir)/src/cartesian.cc \
 			$(top_builddir)/src/endpoint.cc \
 			$(top_builddir)/src/exception.cc \
 			$(top_builddir)/src/fields.cc \
+			$(top_builddir)/src/forward_list.h \
 			$(top_builddir)/src/generate_terms.cc \
 			$(top_builddir)/src/geometry.cc \
 			$(top_builddir)/src/geospatialrange.cc \
@@ -36,11 +37,14 @@ headers =   $(top_builddir)/src/cartesian.cc \
 			$(top_builddir)/src/namegen.cc \
 			$(top_builddir)/src/queue.h \
 			$(top_builddir)/src/serialise.cc \
-			$(top_builddir)/src/forward_list.h \
 			$(top_builddir)/src/threadpool.h \
 			$(top_builddir)/src/times.cc \
 			$(top_builddir)/src/utils.cc \
 			$(top_builddir)/src/wkt_parser.cc
+
+
+set_forward_list_test_SOURCES = $(headers) set_forward_list_test.cc test_forward_list.cc
+set_forward_list_test_LDADD = @CHECK_LIBS@
 
 set_generate_terms_test_SOURCES = $(headers) set_generate_terms_test.cc test_generate_terms.cc
 set_generate_terms_test_LDADD = @CHECK_LIBS@
@@ -59,9 +63,6 @@ set_queue_test_LDADD = @CHECK_LIBS@
 
 set_serialise_unserialise_test_SOURCES = $(headers) set_serialise_unserialise_test.cc test_serialise.cc
 set_serialise_unserialise_test_LDADD = @CHECK_LIBS@
-
-set_slist_test_SOURCES = $(headers) set_slist_test.cc test_slist.cc
-set_slist_test_LDADD = @CHECK_LIBS@
 
 set_sort_test_SOURCES = $(headers) set_sort_test.cc test_sort.cc
 set_sort_test_LDADD = @CHECK_LIBS@
