--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,7 +4,9 @@ check_PROGRAMS = set_forward_list_test \
 				 set_generate_terms_test \
 				 set_geo_test \
 				 set_hash_test \
+				 set_haystack_test \
 				 set_htm_test \
+				 set_lru_test \
 				 set_query_test \
 				 set_queue_test \
 				 set_serialise_unserialise_test \
@@ -30,9 +32,11 @@ headers =   $(top_builddir)/src/cartesian.cc \
 			$(top_builddir)/src/geospatialrange.cc \
 			$(top_builddir)/src/hash/md5.cc \
 			$(top_builddir)/src/hash/sha256.cc \
+			$(top_builddir)/src/haystack.cc \
 			$(top_builddir)/src/htm.cc \
 			$(top_builddir)/src/length.cc \
 			$(top_builddir)/src/log.cc \
+			$(top_builddir)/src/lru.h \
 			$(top_builddir)/src/multivalue.cc \
 			$(top_builddir)/src/multivaluekeymaker.cc \
 			$(top_builddir)/src/multivaluerange.cc \
@@ -57,8 +61,14 @@ set_geo_test_LDADD = @CHECK_LIBS@
 set_hash_test_SOURCES = $(headers) set_hash_test.cc test_hash.cc
 set_hash_test_LDADD = @CHECK_LIBS@
 
+set_haystack_test_SOURCES = $(headers) set_haystack_test.cc test_haystack.cc
+set_haystack_test_LDADD = @CHECK_LIBS@
+
 set_htm_test_SOURCES = $(headers) set_htm_test.cc test_htm.cc
 set_htm_test_LDADD = @CHECK_LIBS@
+
+set_lru_test_SOURCES = $(headers) set_lru_test.cc test_lru.cc
+set_lru_test_LDADD = @CHECK_LIBS@
 
 set_query_test_SOURCES = $(headers) set_query_test.cc test_query.cc
 set_query_test_LDADD = @CHECK_LIBS@
