--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -110,6 +110,35 @@ noinst_HEADERS = \
 	multivaluerange.h \
 	namegen.h \
 	queue.h \
+	rapidjson/error/en.h \
+	rapidjson/error/error.h \
+	rapidjson/internal/biginteger.h \
+	rapidjson/internal/diyfp.h \
+	rapidjson/internal/dtoa.h \
+	rapidjson/internal/ieee754.h \
+	rapidjson/internal/itoa.h \
+	rapidjson/internal/meta.h \
+	rapidjson/internal/pow10.h \
+	rapidjson/internal/stack.h \
+	rapidjson/internal/strfunc.h \
+	rapidjson/internal/strtod.h \
+	rapidjson/internal/swap.h \
+	rapidjson/msinttypes/inttypes.h \
+	rapidjson/msinttypes/stdint.h \
+	rapidjson/allocators.h \
+	rapidjson/document.h \
+	rapidjson/encodedstream.h \
+	rapidjson/encodings.h \
+	rapidjson/filereadstream.h \
+	rapidjson/filewritestream.h \
+	rapidjson/memorybuffer.h \
+	rapidjson/memorystream.h \
+	rapidjson/pointer.h \
+	rapidjson/prettywriter.h \
+	rapidjson/rapidjson.h \
+	rapidjson/reader.h \
+	rapidjson/stringbuffer.h \
+	rapidjson/writer.h \
 	replicator.h \
 	schema.h \
 	serialise.h \
