Enable colored diagnostics (even when using ccache)

--- a/configure.ac
+++ b/configure.ac
@@ -167,5 +167,6 @@ AC_ARG_WITH(binary-proxy,
 
 ########################################################################
 
+CXXFLAGS="$CXXFLAGS -fcolor-diagnostics"
 
 AC_OUTPUT
