--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -24,6 +24,7 @@ common_files =  $(top_builddir)/src/cartesian.cc \
                 $(top_builddir)/src/datetime.cc \
                 $(top_builddir)/src/endpoint.cc \
                 $(top_builddir)/src/exception.cc \
+                $(top_builddir)/src/io_utils.cc \
                 $(top_builddir)/src/fields.cc \
                 $(top_builddir)/src/forward_list.h \
                 $(top_builddir)/src/generate_terms.cc \
